logs/django-ghoster.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_ghoster-0.1.2.dist-info'...
Listing './lib/python3.5/site-packages/ghoster'...
Listing './lib/python3.5/site-packages/ghoster/locale'...
Listing './lib/python3.5/site-packages/ghoster/locale/zh_Hant'...
Listing './lib/python3.5/site-packages/ghoster/locale/zh_Hant/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/ghoster/migrations'...
Compiling './lib/python3.5/site-packages/ghoster/note.py'...
***   File "./lib/python3.5/site-packages/ghoster/note.py", line 3
    Q:
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ghoster/static'...
Listing './lib/python3.5/site-packages/ghoster/static/admin'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/assets'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/assets/css'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/assets/fonts'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/assets/img'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/assets/js'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/assets/js/libs'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/assets/js/views'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/css'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/img'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/img/gis'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/js'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/js/admin'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/BigVideo'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/BigVideo/css'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/BigVideo/lib'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/codemirror'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/codemirror/addon'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/codemirror/addon/mode'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/codemirror/lib'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/codemirror/mode'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/codemirror/mode/gfm'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/codemirror/mode/markdown'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/codemirror/mode/xml'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/datetimepicker'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/datetimepicker/css'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/datetimepicker/js'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/filestyle'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/marked'...
Listing './lib/python3.5/site-packages/ghoster/static/admin/vendor/tagsinput'...
Listing './lib/python3.5/site-packages/ghoster/templates'...
Listing './lib/python3.5/site-packages/ghoster/templates/admin'...
Listing './lib/python3.5/site-packages/ghoster/templates/admin/auth'...
Listing './lib/python3.5/site-packages/ghoster/templates/admin/auth/user'...
Listing './lib/python3.5/site-packages/ghoster/templates/admin/edit_inline'...
Listing './lib/python3.5/site-packages/ghoster/templates/admin/includes'...
Listing './lib/python3.5/site-packages/ghoster/templates/registration'...
Listing './lib/python3.5/site-packages/ghoster/templatetags'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
